fix location of sql